Package triangulation: provides triangulations Delaunay triangulations, 
constrained and regular triangulations with  tests and examples.

14 october 2004 Mariette
- add an output iterator to get flipped facets
  in propogating_flip(List_edges) of 
  Constrained_Delaunay_triangulation_2
- removed an unusefull test in propogating_flip(List_edges) of 
  Constrained_Delaunay_triangulation_2

11 october 2004 Mariette
- fixed include og figure in html version of the doc

23 September 2004 Sylvain Pion
- Don't shorten the name of Gmpz (g++ 3.4 issue).
- Doc : Replace \begin{enumerate} by something that works.

21 September 2004 Sylvain Pion
- Merge Power_test_degenerated_2 into Power_test_2.

20 September 2004 Menelaos Karavelas
- removed references to split and join operations when talking about the
  triangulation data structure concept

15 September 2004 Sylvain Pion
- Remove unused code to please g++ 2.95.

14 September 2004 Sylvain Pion
- Specialize Regular_traits_2<> for Exact_pred_inexact_const_kernel, so that
  it becomes automatically the filtered traits (and thus gets better backward
  compat).

13 September 2004 Sylvain Pion
- Regular traits cleanups.
- Added Regular_triangulation_filtered_traits_2.

7 September 2004 Menelaos Karavelas
- re-added commented code in join_vertices that was referring to degree
  2 vertices

6 September 2004 Menelaos Karavelas
- Documentation: moved join and split methods from the concept TDS_2 to the
  model of T_d_s_2
- Documentation: the methods insert_degree_2 and remove_degree_2 (from
  the Apollonius_graph_2 package) were added in T_d_s_2.
- Code: the methods insert_degree_2 and remove_degree_2 where moved from
  Apollonius_graph_data_structure_2 (obsolete) to
  Triangulation_data_structure_2.

4 September 2004 Menelaos Karavelas
- re-wrote author names in copyright notices using 7-bit characters

1 September 2004 Mariette Yvinec
- fixed typo in doc : ref page of Triangulation_2

28 August 2004 Menelaos Karavelas