@@ -146,11 +146,15 @@ public:
   void remove(Vertex_handle v);
   void remove_incident_constraints(Vertex_handle v);
   void remove_constrained_edge(Face_handle f, int i);
+//  template <class OutputItFaces>
+//  OutputItFaces
+//  remove_constrained_edge(Face_handle f, int i, OutputItFaces out)
  
   //for backward compatibility
   void insert(Point a, Point b) { insert_constraint(a, b);}
   void insert(Vertex_handle va, Vertex_handle  vb) {insert_constraint(va,vb);}
   void remove_constraint(Face_handle f, int i){remove_constrained_edge(f,i);}
+
   // CHECK
   bool is_valid(bool verbose = false, int level = 0) const;
  
@@ -345,7 +349,18 @@ public:
   return out;
  }
 
-
+ template <class OutputItFaces>
+ OutputItFaces
+ remove_constrained_edge(Face_handle f, int i, OutputItFaces out) {
+  Ctr::remove_constrained_edge(f,i);
+  if(dimension() == 2) {
+    List_edges le;
+    le.push_back(Edge(f,i));
+    propagating_flip(le,out);
+  }
+  return out;  
+ }
+ 
 };
 
 
@@ -637,12 +652,7 @@ void
 Constrained_Delaunay_triangulation_2<Gt,Tds,Itag>::
 remove_constrained_edge(Face_handle f, int i)
 {
-  Ctr::remove_constrained_edge(f,i);
-  if(dimension() == 2) {
-    List_edges le;
-    le.push_back(Edge(f,i));
-    propagating_flip(le);
-  }
+  remove_constrained_edge(f,i,Emptyset_iterator());
   return;  
 }
 
