@@ -23,6 +23,8 @@
 // ============================================================================
 
 #include <CGAL/_test_cls_constrained_triangulation_2.C>
+#include <set>
+#include <iterator>
 
 template <class Triangul>
 void 
@@ -113,4 +115,24 @@ _test_cls_const_Del_triangulation(const Triangul&)
 	       conflicts.begin(),
 	       conflicts.end());
   assert(T2.is_valid());
+
+  //test remove_constrained_edge
+  std::cout << "test_remove_constrained_edge " << std::endl;
+  Triangul T3;
+  Vertex_handle v0=T3.insert(Point(0,0));
+  T3.insert(Point(1,1));
+  T3.insert(Point(2,1.1));
+  T3.insert(Point(3,1));
+  Vertex_handle v4=T3.insert(Point(4,0));
+  T3.insert(Point(2, -2));
+  T3.insert_constraint(v0,v4);
+  Face_handle fh;
+  int i;
+  assert(T3.is_edge(v0,v4,fh,i));
+  T3.remove_constrained_edge(fh,i);
+  T3.insert_constraint(v0,v4);
+  assert(T3.is_edge(v0,v4,fh,i));
+  std::set<Face_handle> deleted;
+  T3.remove_constrained_edge(fh,i,inserter(deleted, deleted.begin()));
+  assert(deleted.size()==4);
 }
